--- a/webtapp.html
+++ b/webtapp.html
@@ -1173,7 +1173,7 @@
 
       const selection = document.querySelector('input[name="howwon"]:checked').value;
       const servein = document.querySelector('input[name="serveIn"]:checked').value;
-
+      confirm("cat")
       div.textContent = makeScore();
       makePbp(winner, 0)
       makeStats(winner, selection, servein, prevserver)
