--- a/webtapp.html
+++ b/webtapp.html
@@ -1115,8 +1115,7 @@
           PlayerA.inc("Games")
           if (match.getGames(PlayerA) === 6 && match.getGames(PlayerB) < 5 || match.getGames(PlayerA) === 7) {
             prevSets.push(match.getGames(PlayerA) + '-' + match.getGames(PlayerB))
-            reset(true)
-            confirm(prevSets)
+            match.reset(true)
 
           }
           else if (match.getGames(PlayerA) === 6 && match.getGames(PlayerB) === 6) {
