--- a/webtapp.html
+++ b/webtapp.html
@@ -419,7 +419,7 @@
 
     function isBreakPoint(server, playerAPoints, playerBPoints) {
       // If player A is serving
-      if (server === 'A') {
+      if (server === 'Player A') {
         // It's a break point if:
         // - Player B has 40 points and player A has 30 points
         // - Player B has advantage (ad) 
@@ -428,7 +428,7 @@
         }
       }
       // If player B is serving
-      else if (server === 'B') {
+      else if (server === 'Player B') {
         // It's a break point if: 
         // - Player A has 40 points and player B has 30 points
         // - Player A has advantage (ad)
