--- a/webtapp.html
+++ b/webtapp.html
@@ -418,6 +418,7 @@
     }
 
     function isBreakPoint(server, playerAPoints, playerBPoints) {
+      confirm(server)
       // If player A is serving
       if (server === 'Player A') {
         // It's a break point if:
