--- a/webtapp.html
+++ b/webtapp.html
@@ -419,21 +419,13 @@
 
     function isBreakPoint(server, playerAPoints, playerBPoints) {
       let serverPoints = [0, 15, 30]
-      // If player A is serving
       if (server === 'Player A') {
-        // It's a break point if:
-        // - Player B has 40 points and player A has 30 points
-        // - Player B has advantage (ad) 
-        if ((playerBPoints === 40 && serverPoints.indexOf(playerAPoints) != -1) || playerBPoints === 'ad') {
+        if ((playerBPoints === 40 && serverPoints.indexOf(playerAPoints) != -1) || playerBPoints === 'AD') {
           return true;
         }
       }
-      // If player B is serving
       else if (server === 'Player B') {
-        // It's a break point if: 
-        // - Player A has 40 points and player B has 30 points
-        // - Player A has advantage (ad)
-        if ((playerAPoints === 40 && serverPoints.indexOf(playerBPoints) != -1) || playerAPoints === 'ad') {
+        if ((playerAPoints === 40 && serverPoints.indexOf(playerBPoints) != -1) || playerAPoints === 'AD') {
           return true;
         }
       }
