--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
   <a href="AidanSimsResumeF.pdf">Resume</a>
   <a href="AidanSimsResumeF.pdf">Project Portfolio</a>
   <a href="webtapp.html">Tennis Match Stats</a>
+  <a href="grid.html">Tennis Immaculate Grid</a>
   <p>Welcome to my website!!</p>
 
 
