--- a/grid.html
+++ b/grid.html
@@ -9,6 +9,27 @@
 
   <h1>Tennis Immaculate Grid</h1>
 
+  <div>
+    <button>1</button>
+    <button>2</button>
+    <button>3</button>
+  </div>
+
+  <div>
+    <button>4</button>
+    <button>5</button>
+    <button>6</button>
+  </div>
+
+  <div>
+    <button>7</button>
+    <button>8</button>
+    <button>9</button>
+  </div>
+
+  <p>Guesses left:</p>
+  <p>9</p>
+
 </body>
 
 </html>
