--- a/grid.html
+++ b/grid.html
@@ -10,25 +10,37 @@
   <h1>Tennis Immaculate Grid</h1>
 
   <div>
-    <button>1</button>
-    <button>2</button>
-    <button>3</button>
+    <div>1</div>
+    <div>2</div>
+    <div>3</div>
+    <div>4</div>
   </div>
 
   <div>
-    <button>4</button>
-    <button>5</button>
+    <div>5</div>
     <button>6</button>
-  </div>
-
-  <div>
     <button>7</button>
     <button>8</button>
-    <button>9</button>
+  </div>
+
+  <div>
+    <div>9</div>
+    <button>10</button>
+    <button>11</button>
+    <button>12</button>
+  </div>
+
+  <div>
+    <div>13</div>
+    <button>14</button>
+    <button>15</button>
+    <button>16</button>
   </div>
 
   <p>Guesses left:</p>
   <p>9</p>
+
+  <button>Give up</button>
 
 </body>
 
