--- a/grid.html
+++ b/grid.html
@@ -3,6 +3,8 @@
 
 <head>
   <title>Tennis Immaculate Grid</title>
+  <link rel="stylesheet" href="grid.css">
+  <script src="script.js"></script>
 </head>
 
 <body>
