--- a/grid.html
+++ b/grid.html
@@ -10,35 +10,36 @@
 <body>
 
   <h1>Tennis Immaculate Grid</h1>
+  <div class="grid">
+    <div>
+      <span>1</span>
+      <span>2</span>
+      <span>3</span>
+      <span>4</span>
+    </div>
 
-  <div>
-    <span>1</span>
-    <span>2</span>
-    <span>3</span>
-    <span>4</span>
+    <div>
+      <div>5</div>
+      <button>6</button>
+      <button>7</button>
+      <button>8</button>
+    </div>
+
+    <div>
+      <div>9</div>
+      <button>10</button>
+      <button>11</button>
+      <button>12</button>
+    </div>
+
+    <div>
+      <div>13</div>
+      <button>14</button>
+      <button>15</button>
+      <button>16</button>
+    </div>
+
   </div>
-
-  <div>
-    <div>5</div>
-    <button>6</button>
-    <button>7</button>
-    <button>8</button>
-  </div>
-
-  <div>
-    <div>9</div>
-    <button>10</button>
-    <button>11</button>
-    <button>12</button>
-  </div>
-
-  <div>
-    <div>13</div>
-    <button>14</button>
-    <button>15</button>
-    <button>16</button>
-  </div>
-
   <p>Guesses left:</p>
   <p>9</p>
 
