--- a/grid.html
+++ b/grid.html
@@ -17,33 +17,29 @@
       <span>3</span>
       <span>4</span>
     </div>
-
     <div>
-      <div>5</div>
+      <span>5</span>
       <button>6</button>
       <button>7</button>
       <button>8</button>
     </div>
-
     <div>
-      <div>9</div>
+      <span>9</span>
       <button>10</button>
       <button>11</button>
       <button>12</button>
     </div>
-
     <div>
-      <div>13</div>
+      <span>13</span>
       <button>14</button>
       <button>15</button>
       <button>16</button>
     </div>
-
   </div>
   <p>Guesses left:</p>
   <p>9</p>
 
-  <button>Give up</button>
+  <button class="Endgame">Give up</button>
 
 </body>
 
