--- a/grid.html
+++ b/grid.html
@@ -10,46 +10,32 @@
 <body>
 
   <h1>Tennis Immaculate Grid</h1>
-
   <div class="grid">
     <div>
-      <span>
-        <div>1</div>
-      </span>
-      <span>
-        <div>2</div>
-      </span><span>
-        <div>3</div>
-      </span><span>
-        <div>4</div>
-      </span>
+      <span>1</span>
+      <span>2</span>
+      <span>3</span>
+      <span>4</span>
     </div>
-
     <div>
-      <span>
-        <div>5</div>
-      </span>
-      <span>
-        <button>6</button>
-      </span><span><button>7</button></span><span><button>8</button></span>
+      <span>5</span>
+      <button>6</button>
+      <button>7</button>
+      <button>8</button>
     </div>
-
     <div>
-      <span>
-        <div>9</div>
-      </span>
-      <span><button>10</button></span><span><button>11</button></span><span><button>12</button></span>
+      <span>9</span>
+      <button>10</button>
+      <button>11</button>
+      <button>12</button>
     </div>
-
     <div>
-      <span>
-        <div>13</div>
-      </span>
-      <span><button>14</button></span><span><button>15</button></span><span><button>16</button></span>
+      <span>13</span>
+      <button>14</button>
+      <button>15</button>
+      <button>16</button>
     </div>
-
   </div>
-
   <p>Guesses left:</p>
   <p>9</p>
 
