--- a/grid.html
+++ b/grid.html
@@ -10,32 +10,35 @@
 <body>
 
   <h1>Tennis Immaculate Grid</h1>
-  <div class="grid">
-    <div>
-      <span>1</span>
-      <span>2</span>
-      <span>3</span>
-      <span>4</span>
-    </div>
-    <div>
-      <span>5</span>
-      <button>6</button>
-      <button>7</button>
-      <button>8</button>
-    </div>
-    <div>
-      <span>9</span>
-      <button>10</button>
-      <button>11</button>
-      <button>12</button>
-    </div>
-    <div>
-      <span>13</span>
-      <button>14</button>
-      <button>15</button>
-      <button>16</button>
-    </div>
-  </div>
+  <table>
+    <tr>
+      <td>1</td>
+      <td>2</td>
+      <td>3</td>
+      <td>4</td>
+    </tr>
+
+    <tr>
+      <td>5</td>
+      <td><button>6</button></td>
+      <td><button>7</button></td>
+      <td><button>8</button></td>
+    </tr>
+
+    <tr>
+      <td>9</td>
+      <td><button>10</button></td>
+      <td><button>11</button></td>
+      <td><button>12</button></td>
+    </tr>
+
+    <tr>
+      <td>13</td>
+      <td><button>14</button></td>
+      <td><button>15</button></td>
+      <td><button>16</button></td>
+    </tr>
+  </table>
   <p>Guesses left:</p>
   <p>9</p>
 
