--- a/grid.html
+++ b/grid.html
@@ -10,35 +10,37 @@
 <body>
 
   <h1>Tennis Immaculate Grid</h1>
-  <table>
-    <tr>
-      <td>1</td>
-      <td>2</td>
-      <td>3</td>
-      <td>4</td>
-    </tr>
+  <div class="grid">
+    <table>
+      <tr>
+        <td>1</td>
+        <td>2</td>
+        <td>3</td>
+        <td>4</td>
+      </tr>
 
-    <tr>
-      <td>5</td>
-      <td><button>6</button></td>
-      <td><button>7</button></td>
-      <td><button>8</button></td>
-    </tr>
+      <tr>
+        <td>5</td>
+        <td><button>6</button></td>
+        <td><button>7</button></td>
+        <td><button>8</button></td>
+      </tr>
 
-    <tr>
-      <td>9</td>
-      <td><button>10</button></td>
-      <td><button>11</button></td>
-      <td><button>12</button></td>
-    </tr>
+      <tr>
+        <td>9</td>
+        <td><button>10</button></td>
+        <td><button>11</button></td>
+        <td><button>12</button></td>
+      </tr>
 
-    <tr>
-      <td>13</td>
-      <td><button>14</button></td>
-      <td><button>15</button></td>
-      <td><button>16</button></td>
-    </tr>
-  </table>
+      <tr>
+        <td>13</td>
+        <td><button>14</button></td>
+        <td><button>15</button></td>
+        <td><button>16</button></td>
+      </tr>
+    </table>
+  </div>
   <p>Guesses left:</p>
   <p>9</p>
 
