--- a/grid.html
+++ b/grid.html
@@ -14,7 +14,7 @@
   <table class="grid">
     <tr>
       <td>1</td>
-      <td>2</td>
+      <td id="leftCat">2</td>
       <td>3</td>
       <td>4</td>
     </tr>
