--- a/grid.html
+++ b/grid.html
@@ -13,7 +13,7 @@
 
   <table class="grid">
     <tr>
-      <td><img src="racket.png"></td>
+      <td><img src="racket.png" width="160" height="160"></td>
       <td id="leftCat">2</td>
       <td>3</td>
       <td>4</td>
