--- a/grid.html
+++ b/grid.html
@@ -4,7 +4,7 @@
 <head>
   <title>Tennis Immaculate Grid</title>
   <link rel="stylesheet" href="grid.css">
-
+  <script src="grid.js"></script>
 </head>
 
 <body>
@@ -45,7 +45,6 @@
   <p>9</p>
 
   <button>Give up</button>
-  <script src="script.js"></script>
 </body>
 
 </html>
