--- a/grid.html
+++ b/grid.html
@@ -13,9 +13,9 @@
   <table class="grid">
     <tr>
       <td><img src="racket.png" width="160" height="160"></td>
-      <td id="leftCat">2</td>
-      <td>3</td>
-      <td>4</td>
+      <td id="topRow">2</td>
+      <td id="midRow">3</td>
+      <td id="bottomRow">4</td>
     </tr>
 
     <tr>
