--- a/grid.html
+++ b/grid.html
@@ -40,10 +40,13 @@
     </tr>
   </table>
 
-  <p>Guesses left:</p>
-  <p>9</p>
+  <div class="rightSide">
+    <p>Guesses left:</p>
+    <p>9</p>
 
-  <button>Give up</button>
+    <button>Give up</button>
+  </div>
+
   <script src="grid.js"></script>
 </body>
 
