--- a/grid.html
+++ b/grid.html
@@ -10,41 +10,43 @@
 
   <h1>Tennis Immaculate Grid</h1>
 
-  <table class="grid">
-    <tr>
-      <td><img src="racket.png" width="160" height="160"></td>
-      <td id="leftCol" class="category">2</td>
-      <td id="midCol" class="category">3</td>
-      <td id="rightCol" class="category">4</td>
-    </tr>
+  <div class="flex-container">
+    <table class="grid">
+      <tr>
+        <td><img src="racket.png" width="160" height="160"></td>
+        <td id="leftCol" class="category">2</td>
+        <td id="midCol" class="category">3</td>
+        <td id="rightCol" class="category">4</td>
+      </tr>
 
-    <tr>
-      <td id="topRow" class="category">5</td>
-      <td><button>6</button></td>
-      <td><button>7</button></td>
-      <td><button>8</button></td>
-    </tr>
+      <tr>
+        <td id="topRow" class="category">5</td>
+        <td><button>6</button></td>
+        <td><button>7</button></td>
+        <td><button>8</button></td>
+      </tr>
 
-    <tr>
-      <td id="midRow" class="category">9</td>
-      <td><button>10</button></td>
-      <td><button>11</button></td>
-      <td><button>12</button></td>
-    </tr>
+      <tr>
+        <td id="midRow" class="category">9</td>
+        <td><button>10</button></td>
+        <td><button>11</button></td>
+        <td><button>12</button></td>
+      </tr>
 
-    <tr>
-      <td id="bottomRow" class="category">13</td>
-      <td><button>14</button></td>
-      <td><button>15</button></td>
-      <td><button>16</button></td>
-    </tr>
-  </table>
+      <tr>
+        <td id="bottomRow" class="category">13</td>
+        <td><button>14</button></td>
+        <td><button>15</button></td>
+        <td><button>16</button></td>
+      </tr>
+    </table>
 
-  <div class="rightSide">
-    <p>Guesses left:</p>
-    <p>9</p>
+    <div class="rightSide">
+      <p>Guesses left:</p>
+      <p>9</p>
 
-    <button>Give up</button>
+      <button>Give up</button>
+    </div>
   </div>
 
   <script src="grid.js"></script>
