--- a/grid.html
+++ b/grid.html
@@ -21,7 +21,7 @@
 
     <tr>
       <td id="topRow" class="category">5</td>
-      <td><button>6</button></td>
+      <td><button onclick="openForm()"></button></td>
       <td><button>7</button></td>
       <td><button>8</button></td>
     </tr>
