--- a/grid.html
+++ b/grid.html
@@ -53,8 +53,13 @@
 
       <h1>Login</h1>
 
-      <label for="email"><b>Email</b></label>
-      <input type="text" placeholder="Enter Email" name="email" required>
+      <label for="email">Email:</label><input type="email" id="email" name="email" required list="emailSuggestions">
+
+      <datalist id="emailSuggestions">
+        <option value="john@example.com"></option>
+        <option value="mary@example.com"></option>
+        <option value="peter@example.com"></option>
+      </datalist>
 
       <label for="psw"><b>Password</b></label>
       <input type="password" placeholder="Enter Password" name="psw" required>
