--- a/grid.html
+++ b/grid.html
@@ -51,8 +51,6 @@
   <div class="form-popup" id="myForm">
     <form class="form-container">
 
-      <h1>Login</h1>
-
       <label for="email">Email:</label><input type="email" id="email" name="email" required list="emailSuggestions">
 
       <datalist id="emailSuggestions">
@@ -61,11 +59,8 @@
         <option value="peter@example.com"></option>
       </datalist>
 
-      <label for="psw"><b>Password</b></label>
-      <input type="password" placeholder="Enter Password" name="psw" required>
-
-      <button type="submit" class="btn">Login</button>
-      <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
+      <button type="submit" class="btn">Enter</button>
+      <button type="button" class="btn cancel" onclick="closeForm()">Submit</button>
     </form>
   </div>
 
