--- a/grid.html
+++ b/grid.html
@@ -60,7 +60,7 @@
       </datalist>
 
       <button type="submit" class="btn">Enter</button>
-      <button type="button" class="btn cancel" onclick="closeForm()">Submit</button>
+      <button type="button" class="btn cancel" onclick="closeForm()">Back</button>
     </form>
   </div>
 
