--- a/grid.html
+++ b/grid.html
@@ -59,7 +59,7 @@
         <option value="peter@example.com"></option>
       </datalist>
 
-      <button type="submit" class="btn" onclick="submit()">Enter</button>
+      <button type="button" class="btn" onclick="submit()">Enter</button>
       <button type="button" class="btn cancel" onclick="closeForm()">Back</button>
     </form>
   </div>
