--- a/grid.html
+++ b/grid.html
@@ -51,7 +51,7 @@
   <div class="form-popup" id="myForm">
     <form class="form-container">
 
-      <label for="email">Email:</label><input type="email" id="email" name="email" required list="emailSuggestions">
+      <label for="email">Player:</label><input type="email" id="email" name="email" required list="emailSuggestions">
 
       <datalist id="emailSuggestions">
         <option value="john@example.com"></option>
