--- a/grid.html
+++ b/grid.html
@@ -61,6 +61,7 @@
 
       <button type="button" class="btn" onclick="submit()">Enter</button>
       <button type="button" class="btn cancel" onclick="closeForm()">Back</button>
+      <button type="button" class="btn cancel" onclick="submit()">Back</button>
     </form>
   </div>
 
