--- a/grid.html
+++ b/grid.html
@@ -22,7 +22,7 @@
     <tr>
       <td id="topRow" class="category">5</td>
       <td id="button1"><button onclick="openForm(button1)"></button></td>
-      <td id="button2"><button onclick="openForm(button2)">7</button></td>
+      <td id="button2"><button onclick="openForm(button2)"></button></td>
       <td id="button3"><button onclick="openForm(button3)">8</button></td>
     </tr>
 
