--- a/grid.html
+++ b/grid.html
@@ -28,7 +28,7 @@
 
     <tr>
       <td id="midRow" class="category">9</td>
-      <td id="button4"><button onclick="openForm(button4)">10</button></td>
+      <td id="button4"><button onclick="openForm(button4)"></button></td>
       <td id="button5"><button onclick="openForm(button5)">11</button></td>
       <td id="button6"><button onclick="openForm(button6)">12</button></td>
     </tr>
