--- a/grid.html
+++ b/grid.html
@@ -21,23 +21,23 @@
 
     <tr>
       <td id="topRow" class="category">5</td>
-      <td id="button1"><button onclick="openForm(button1)"></button></td>
-      <td id="button2"><button onclick="openForm(button2)"></button></td>
-      <td id="button3"><button onclick="openForm(button3)"></button></td>
+      <td id="button1"><button onclick="openForm('button1')"></button></td>
+      <td id="button2"><button onclick="openForm('button2')"></button></td>
+      <td id="button3"><button onclick="openForm('button3')"></button></td>
     </tr>
 
     <tr>
       <td id="midRow" class="category">9</td>
-      <td id="button4"><button onclick="openForm(button4)"></button></td>
-      <td id="button5"><button onclick="openForm(button5)">11</button></td>
-      <td id="button6"><button onclick="openForm(button6)">12</button></td>
+      <td id="button4"><button onclick="openForm('button4')"></button></td>
+      <td id="button5"><button onclick="openForm('button5')">11</button></td>
+      <td id="button6"><button onclick="openForm('button6')">12</button></td>
     </tr>
 
     <tr>
       <td id="bottomRow" class="category">13</td>
-      <td id="button7"><button onclick="openForm(button7)">14</button></td>
-      <td id="button8"><button onclick="openForm(button8)">15</button></td>
-      <td id="button9"><button onclick="openForm(button9)">16</button></td>
+      <td id="button7"><button onclick="openForm('button7')">14</button></td>
+      <td id="button8"><button onclick="openForm('button8')">15</button></td>
+      <td id="button9"><button onclick="openForm('button9')">16</button></td>
     </tr>
   </table>
 
