--- a/grid.html
+++ b/grid.html
@@ -29,15 +29,15 @@
     <tr>
       <td id="midRow" class="category">9</td>
       <td id="button4"><button onclick="openForm('button4')"></button></td>
-      <td id="button5"><button onclick="openForm('button5')">11</button></td>
-      <td id="button6"><button onclick="openForm('button6')">12</button></td>
+      <td id="button5"><button onclick="openForm('button5')"></button></td>
+      <td id="button6"><button onclick="openForm('button6')"></button></td>
     </tr>
 
     <tr>
       <td id="bottomRow" class="category">13</td>
-      <td id="button7"><button onclick="openForm('button7')">14</button></td>
-      <td id="button8"><button onclick="openForm('button8')">15</button></td>
-      <td id="button9"><button onclick="openForm('button9')">16</button></td>
+      <td id="button7"><button onclick="openForm('button7')"></button></td>
+      <td id="button8"><button onclick="openForm('button8')"></button></td>
+      <td id="button9"><button onclick="openForm('button9')"></button></td>
     </tr>
   </table>
 
