--- a/grid.html
+++ b/grid.html
@@ -21,23 +21,23 @@
 
     <tr>
       <td id="topRow" class="category">5</td>
-      <td id="button1"><button onclick="openForm('button1')"></button></td>
-      <td id="button2"><button onclick="openForm('button2')"></button></td>
-      <td id="button3"><button onclick="openForm('button3')"></button></td>
+      <td id="button1" class="button"><button onclick="openForm('button1')"></button></td>
+      <td id="button2" class="button"><button onclick="openForm('button2')"></button></td>
+      <td id="button3" class="button"><button onclick="openForm('button3')"></button></td>
     </tr>
 
     <tr>
       <td id="midRow" class="category">9</td>
-      <td id="button4"><button onclick="openForm('button4')"></button></td>
-      <td id="button5"><button onclick="openForm('button5')"></button></td>
-      <td id="button6"><button onclick="openForm('button6')"></button></td>
+      <td id="button4" class="button"><button onclick="openForm('button4')"></button></td>
+      <td id="button5" class="button"><button onclick="openForm('button5')"></button></td>
+      <td id="button6" class="button"><button onclick="openForm('button6')"></button></td>
     </tr>
 
     <tr>
       <td id="bottomRow" class="category">13</td>
-      <td id="button7"><button onclick="openForm('button7')"></button></td>
-      <td id="button8"><button onclick="openForm('button8')"></button></td>
-      <td id="button9"><button onclick="openForm('button9')"></button></td>
+      <td id="button7" class="button"><button onclick="openForm('button7')"></button></td>
+      <td id="button8" class="button"><button onclick="openForm('button8')"></button></td>
+      <td id="button9" class="button"><button onclick="openForm('button9')"></button></td>
     </tr>
   </table>
 
