--- a/grid.html
+++ b/grid.html
@@ -43,7 +43,7 @@
 
   <div class="guesses">
     <p>Guesses left:</p>
-    <p>9</p>
+    <p class="guesses-left">9</p>
 
     <button>Give up</button>
   </div>
