--- a/grid.html
+++ b/grid.html
@@ -45,7 +45,7 @@
     <p>Guesses left:</p>
     <p class="guesses-left">9</p>
 
-    <button>Give up</button>
+    <button onclick="giveUp()">Give up</button>
   </div>
 
   <div class="form-popup" id="myForm">
