added wayne game

--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
   <a href="AidanSimsResumeF.pdf">Project Portfolio</a>
   <a href="webtapp.html">Tennis Match Stats</a>
   <a href="grid.html">Tennis Immaculate Grid</a>
+  <a href="wayne.html">Wayne</a>
   <p>Welcome to my website!!</p>
 
 
