--- a/wayne.html
+++ b/wayne.html
@@ -9,21 +9,26 @@
     body {
       margin: 0;
       font-family: 'Arial', sans-serif;
-      background-color: #f0f0f0;
-      color: #333;
+      background-color: #fff3e0;
+      /* Light warm peach background */
+      color: #5a2d0c;
+      /* Darker brown text for contrast */
     }
 
     /* Header styles */
     header {
-      background-color: #222;
-      color: #fff;
+      background-color: #ffab91;
+      /* Warm light red/orange */
+      color: #3e2723;
+      /* Deep brown for text */
       padding: 20px 0;
       text-align: center;
     }
 
     #header-title {
       margin: 0;
-      font-size: 2em;
+      font-size: 3em;
+      /* Increased size */
     }
 
     /* Input section styles */
@@ -36,13 +41,19 @@
       padding: 8px;
       width: 250px;
       border-radius: 5px;
-      border: 1px solid #ddd;
+      border: 1px solid #ffb74d;
+      /* Softer orange border */
       font-size: 16px;
+      background-color: #ffecb3;
+      /* Very light yellow background */
+      color: #5a2d0c;
+      /* Keeping text color consistent */
     }
 
     #guess-button {
       padding: 10px 20px;
-      background-color: #007bff;
+      background-color: #ff9800;
+      /* Vibrant orange for the button */
       color: white;
       border: none;
       border-radius: 5px;
@@ -52,7 +63,8 @@
     }
 
     #guess-button:hover {
-      background-color: #0056b3;
+      background-color: #f57c00;
+      /* Slightly darker orange on hover */
     }
 
     /* Table styles */
@@ -66,22 +78,28 @@
     #result-table td {
       text-align: left;
       padding: 8px;
-      border: 1px solid #ddd;
+      border: 1px solid #ffccbc;
+      /* Light peach borders for cells */
     }
 
     #result-table th {
-      background-color: #007bff;
-      color: #fff;
+      background-color: #ff7043;
+      /* Deeper orange for headers */
+      color: #3e2723;
+      /* Deep brown for header text */
     }
 
     #result-table tr:nth-child(even) {
-      background-color: #f2f2f2;
+      background-color: #ffe0b2;
+      /* Lighter peach for alternating rows */
     }
 
     /* Footer styles */
     footer {
-      background-color: #222;
-      color: #fff;
+      background-color: #ffab91;
+      /* Matching the header */
+      color: #3e2723;
+      /* Deep brown text */
       text-align: center;
       padding: 20px 0;
       position: fixed;
@@ -90,7 +108,8 @@
     }
 
     footer a {
-      color: #09f;
+      color: #5d4037;
+      /* Warm brown for links */
       text-decoration: none;
     }
 
